feat(ai_engine): implement ML-based smart matching system
Generate synthetic labeled dataset for offer/request matching
Engineer features (keywords, location distance, quantity, etc.)
Train RandomForest model to predict match quality
Add Flask endpoint /match_score to provide match score using trained model
Install required Python packages (pandas, scikit-learn, geopy, flask)

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://synapseUser:pybbet-haqVuk-cagcu1@synapse.a0wpga3.mongodb.net/?retryWrites=true&w=majority&appName=Synapse
 JWT_SECRET=yourSuperSecretKeyForSynapseProject
+OPENCAGE_API_KEY=c97c63e60a0a4170bc81c93c7f6a155d
