--- a/frontend/synapse_app/pubspec.yaml
+++ b/frontend/synapse_app/pubspec.yaml
@@ -30,9 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1
+  http: ^0.13.6
   flutter_secure_storage: ^9.0.0
   google_maps_flutter: ^2.6.1
+  flutter_google_places: ^0.3.0
+  google_maps_webservice: ^0.0.20-nullsafety.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
