--- a/frontend/synapse_app/pubspec.yaml
+++ b/frontend/synapse_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_maps_flutter: ^2.6.1
   flutter_google_places: ^0.3.0
   google_maps_webservice: ^0.0.20-nullsafety.5
+  flutter_svg: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,10 +63,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
