--- a/frontend/synapse_app/pubspec.yaml
+++ b/frontend/synapse_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   google_maps_webservice: ^0.0.20-nullsafety.5
   flutter_svg: ^2.0.7
+  carousel_slider: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
