feat: update app bar with SF Pro font and SVG logo
Added SF Pro Display font family to pubspec.yaml
Updated app bar to use SF Pro font for title
Replaced text "Synapse Map" with "Synapse" and SVG logo from assets
Removed debug print statements from filtering logic
Imported flutter_svg and used SvgPicture for logo rendering

--- a/frontend/synapse_app/pubspec.yaml
+++ b/frontend/synapse_app/pubspec.yaml
@@ -66,6 +66,32 @@ flutter:
 
   assets:
     - assets/logo.svg
+  fonts:
+    - family: SF Pro Display
+      fonts:
+        - asset: fonts/SFPRODISPLAYREGULAR.OTF
+        - asset: fonts/SFPRODISPLAYBOLD.OTF
+          weight: 700
+        - asset: fonts/SFPRODISPLAYMEDIUM.OTF
+          weight: 500
+        - asset: fonts/SFPRODISPLAYBLACKITALIC.OTF
+          weight: 900
+          style: italic
+        - asset: fonts/SFPRODISPLAYHEAVYITALIC.OTF
+          weight: 800
+          style: italic
+        - asset: fonts/SFPRODISPLAYLIGHTITALIC.OTF
+          weight: 300
+          style: italic
+        - asset: fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF
+          weight: 600
+          style: italic
+        - asset: fonts/SFPRODISPLAYTHINITALIC.OTF
+          weight: 100
+          style: italic
+        - asset: fonts/SFPRODISPLAYULTRALIGHTITALIC.OTF
+          weight: 200
+          style: italic
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
