--- a/frontend/synapse_app/pubspec.yaml
+++ b/frontend/synapse_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_maps_webservice: ^0.0.20-nullsafety.5
   flutter_svg: ^2.0.7
   carousel_slider: ^4.0.0
+  animated_text_kit: ^4.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,6 +67,8 @@ flutter:
 
   assets:
     - assets/logo.svg
+    - assets/55.jpg
+    
   fonts:
     - family: SF Pro Display
       fonts:
